Fri Jan 23 15:12:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (mkintpath): new function which converts native path
	  to format acceptable in Makefile.

	* lib/mkmf.rb (configuration): leaves PATH_SEPARATOR unchanged.

	* lib/mkmf.rb (configuration): convers srcdir, topdir and hdrdir.
	  a patch by Alexey Borzenkov <snaury AT gmail.com> at
	  [ruby-core:21448].

	* lib/mkmf.rb (try_func): got rid of c-mode confusion.

Thu Jan 22 12:19:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (define_final): cannot define finalizer for immediate
	  values.  [ruby-core:21500]

	* gc.c (define_final): freezes or hides internal values.

Thu Jan 22 11:57:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_call_finalizer_at_exit): deffers IO finalization.
	  [ruby-dev:36646]

Thu Jan 22 05:17:06 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (def_erb_method): pass the trim_mode  [Feature #1032]

	* test/erb/trim_hello.erb: ditto

	* test/erb/test_erb.rb: ditto

Wed Jan 21 17:25:41 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (ary_double_capa): a new function to expand array more
	  aggressively.   [ruby-core:21460]

	* array.c (rb_ary_store): use ary_double_capa().

	* array.c (rb_ary_splice): ditto.

Wed Jan 21 15:43:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (inspect_enumerator, yielder_new_i): added
	  prototypes to suppress warnings due to a bug of VC6.

Wed Jan 21 11:17:44 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* variable.c (rb_mod_remove_cvar): fixed rb_mod_remove_cvar() to
	  pass test_cvar_scope_with_instance_eval in test/ruby/test_eval.rb.
	  Module#remove_class_variable seems to be broken in r19711.

Tue Jan 20 18:30:57 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (IS_BEG): EXPR_CLASS should be treated like EXPR_BEG.
	  [ruby-core:21453]

Tue Jan 20 04:02:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
